--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=1280" />
      <meta name="description" content="Robotech NITK - Official Robotics Club Website">
     <meta name="theme-color" content="#000000">
     <link rel="icon" type="image/jpeg" href="/robotech_nitk_logo.jpeg" />
