--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,20 +1,45 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=1280" />
-     <meta name="description" content="Robotech NITK - Official Robotics Club Website">
-    <meta name="theme-color" content="#000000">
-    <link rel="icon" type="image/jpeg" href="/robotech_nitk_logo.jpeg" />
-    
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-    <title>Robotech NITK</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-       <!-- AFTER BUILD -->
-    <!-- <script type="module" src="/assets/index-xxxx.js"></script> -->
-  </body>
+<meta charset="UTF-8" />
+<meta name="google-site-verification" content="NyfMn4URHg_k5c_ieNuPyatFH1Uejqfql0uH6bogIPo" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<!-- Primary Meta Tags -->
+<title>RoboTech NITK | Official Robotics Club</title>
+<meta name="title" content="RoboTech NITK | Official Robotics Club">
+<meta name="description"
+  content="Official website of RoboTech NITK. A community of innovators, engineers, and creators building intelligent machines to shape tomorrow. Join us to explore Robotics, AI, and Automation.">
+<meta name="keywords"
+  content="RoboTech, NITK, Robotics Club, NIT Surathkal, AI, Artificial Intelligence, Automation, Engineering, Student Club, Technology, Workshops, Projects">
+<meta name="author" content="RoboTech NITK">
+<meta name="theme-color" content="#000000">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://robotech.nitk.ac.in/">
+<meta property="og:title" content="RoboTech NITK | Official Robotics Club">
+<meta property="og:description"
+  content="Join RoboTech NITK to explore the world of Robotics and AI. Discover our projects, events, and workshops.">
+<meta property="og:image" content="/robotech_nitk_logo.jpeg">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://robotech.nitk.ac.in/">
+<meta property="twitter:title" content="RoboTech NITK | Official Robotics Club">
+<meta property="twitter:description"
+  content="Join RoboTech NITK to explore the world of Robotics and AI. Discover our projects, events, and workshops.">
+<meta property="twitter:image" content="/robotech_nitk_logo.jpeg">
+
+<link rel="icon" type="image/jpeg" href="/robotech_nitk_logo.jpeg" />
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Montserrat:wght@400;600&display=swap"
+  rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+  <!-- AFTER BUILD -->
+  <!-- <script type="module" src="/assets/index-xxxx.js"></script> -->
+</body>
+
 </html>
